# MC_Assignment_3

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/ass3/: MainActivity.kt  MatrixFragment.kt  ResultFragment.kt  ViewPagerAdapter.kt
app/src/main/res/layout/: activity_main.xml  fragment_matrix.xml  fragment_result.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
